fixed overlap of front-footer on shorter screens

--- a/assets/less/jomi/footer.less
+++ b/assets/less/jomi/footer.less
@@ -167,7 +167,7 @@ footer.front-footer{
 @media (min-width: 992px) { 
 
 }
-@media (min-width: 992px) and (min-height: 700px) {
+@media (min-width: 992px) and (min-height: 750px) {
 
    footer.front-footer{
       position: absolute;
